--- a/.vim/rc/dein_lazy.toml
+++ b/.vim/rc/dein_lazy.toml
@@ -24,6 +24,6 @@ on_i = 1
 [[plugins]]
 repo = 'hynek/vim-python-pep8-indent'
 on_ft = ['python', 'python3', 'djangohtml']
-[[plugins]]
-repo = 'hdima/python-syntax'
-on_ft = ['python', 'python3']
+#[[plugins]]
+#repo = 'hdima/python-syntax'
+#on_ft = ['python', 'python3']
