--- a/.vim/rc/dein.toml
+++ b/.vim/rc/dein.toml
@@ -21,3 +21,7 @@ repo = 'editorconfig/editorconfig-vim'
 # Color scheme
 [[plugins]]
 repo = 'w0ng/vim-hybrid'
+
+# python syntax
+[[plugins]]
+repo = 'hdima/python-syntax'
