--- a/nvim/dein/rc/dein.toml
+++ b/nvim/dein/rc/dein.toml
@@ -14,3 +14,7 @@ repo = 'editorconfig/editorconfig-vim'
 # Color scheme
 [[plugins]]
 repo = 'w0ng/vim-hybrid'
+
+# python indent support
+[[plugins]]
+repo = 'hynek/vim-python-pep8-indent'
