入力補助のプラグインを入れた(入れただけ)

--- a/nvim/dein/rc/dein.toml
+++ b/nvim/dein/rc/dein.toml
@@ -18,3 +18,7 @@ repo = 'w0ng/vim-hybrid'
 # python indent support
 [[plugins]]
 repo = 'hynek/vim-python-pep8-indent'
+
+# TOML syntax highlight
+[[plugins]]
+repo = 'cespare/vim-toml'
