--- a/nvim/dein/rc/dein_lazy.toml
+++ b/nvim/dein/rc/dein_lazy.toml
@@ -18,3 +18,6 @@ hook_add = '''
 [[plugins]]
 repo = 'zchee/deoplete-jedi'
 on_ft = ['python', 'python3', 'djangohtml']
+hook_add = '''
+    let g:deoplete#sources#jedi#statement_length = 0
+'''
