jinja2のシンタックスハイライト用プラグイン導入

--- a/nvim/rc/dein.toml
+++ b/nvim/rc/dein.toml
@@ -30,9 +30,10 @@ repo = 'tomasr/molokai'
 [[plugins]]
 repo = 'hynek/vim-python-pep8-indent'
 
-# TOML syntax highlight
+# syntax highlight
 [[plugins]]
 repo = 'cespare/vim-toml'
-
 [[plugins]]
 repo = 'rust-lang/rust.vim'
+[[plugins]]
+repo = 'lepture/vim-jinja'
