--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,16 @@
-set-option -g default-shell "/usr/bin/fish"
+# - TMUX CONFIG -
+# 外観
+set-option -g status-position top
 set-option -g default-terminal screen-256color
 set -g terminal-overrides 'xterm:colors=256'
-# mouse option
+
+# マウス設定
 set -g mouse on
 bind -T root WheelUpPane   if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; copy-mode -e; send-keys -M"
 bind -T root WheelDownPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; send-keys -M"
+
+# その他
+set -s escape-time 0    # Vimを使うときにEscが遅くなるのを防ぐ
+
+# 起動設定
+set-option -g default-shell "/usr/bin/fish"
