status line の設定

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,16 +1,41 @@
 # - TMUX CONFIG -
-# 外観
+
+## KeyConfig
+bind-key r source-file ~/.tmux.conf # 設定リロード
+
+## 外観
+set-option -g status-interval 1 # status line を更新する間隔を 1 秒にする
 set-option -g status-position top
 set-option -g default-terminal screen-256color
 set -g terminal-overrides 'xterm:colors=256'
+set-option -g status-justify left
+set-option -g status-bg "colour240"
+set-option -g status-fg "colour250"
+### 左パネル
+set-option -g status-left-length 20
+set-option -g status-left \
+"#[fg=colour255,bg=colour166]#{?client_prefix,#[reverse] PREF , TMUX }"\
+"#P #[default] "
+### 右パネル
+set-option -g status-right-length 60
+set-option -g status-right \
+"#[fg=colour250,bg=colour242] LA: #(cut -d' ' -f-3 /proc/loadavg) "\
+"#[fg=colour240,bg=colour247] %m月%d日 %H:%M #[default]"
+### Windowパネル
+set-window-option -g window-status-format " #I #W "
+set-window-option -g window-status-current-format \
+"#[fg=colour255,bg=colour235,bold] #I #W #[default]"
+#set-window-option -g window-status-separator " "
 
-# マウス設定
+## マウス設定
 set -g mouse on
-bind -T root WheelUpPane   if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; copy-mode -e; send-keys -M"
-bind -T root WheelDownPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; send-keys -M"
+bind -T root WheelUpPane   if-shell -F -t = \
+"#{alternate_on}" "send-keys -M" "select-pane -t =; copy-mode -e; send-keys -M"
+bind -T root WheelDownPane if-shell -F -t = \
+"#{alternate_on}" "send-keys -M" "select-pane -t =; send-keys -M"
 
-# その他
+## その他
 set -s escape-time 0    # Vimを使うときにEscが遅くなるのを防ぐ
 
-# 起動設定
+## 起動設定
 set-option -g default-shell "/usr/bin/fish"
