--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,7 +7,7 @@ bind-key r source-file ~/.tmux.conf # 設定リロード
 set-option -g status-interval 1 # status line を更新する間隔を 1 秒にする
 set-option -g status-position top
 set-option -g default-terminal screen-256color
-set -g terminal-overrides 'xterm:colors=256'
+set-option -ga terminal-overrides ",xterm-256color:Tc"
 set-option -g status-justify left
 set-option -g status-bg "colour240"
 set-option -g status-fg "colour250"
