--- a/.tmux.conf
+++ b/.tmux.conf
@@ -25,7 +25,9 @@ set-option -g status-right \
 set-window-option -g window-status-format " #I #W "
 set-window-option -g window-status-current-format \
 "#[fg=colour255,bg=colour235,bold] #I #W #[default]"
-#set-window-option -g window-status-separator " "
+set  -g pane-active-border-fg    colour166
+set  -g pane-border-fg           black
+setw -g window-status-current-fg blue
 
 ## マウス設定
 set -g mouse on
