tmux クリップボードの共有

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,6 +2,15 @@
 
 ## KeyConfig
 bind-key r source-file ~/.tmux.conf # 設定リロード
+### コピー&ペースト
+bind-key v copy-mode \; display "Copy-mode!"
+set-window-option -g mode-keys vi
+#### Prefix+Enter/y でコピー
+#bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+bind-key -t vi-copy y copy-pipe "xsel -bi"
+#### Prefix+p でペースト
+#### クリップボードにも保存されているので Cmd-v でもペースト可能
+bind-key p paste-buffer
 
 ## 外観
 set-option -g status-interval 1 # status line を更新する間隔を 1 秒にする
