tmux クリップボードからペーストできるように

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,8 +9,7 @@ set-window-option -g mode-keys vi
 #bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 bind-key -t vi-copy y copy-pipe "xsel -bi"
 #### Prefix+p でペースト
-#### クリップボードにも保存されているので Cmd-v でもペースト可能
-bind-key p paste-buffer
+bind-key p if-shell 'xsel -b -o > ~/.tmux-buffer' 'load-buffer ~/.tmux-buffer ; paste-buffer'
 
 ## 外観
 set-option -g status-interval 1 # status line を更新する間隔を 1 秒にする
