--- a/.tmux.conf
+++ b/.tmux.conf
@@ -22,13 +22,13 @@ set-option -g status-fg "colour250"
 ### 左パネル
 set-option -g status-left-length 20
 set-option -g status-left \
-"#[fg=colour255,bg=colour166]#{?client_prefix,#[reverse] PREF , TMUX }"\
+"#[fg=black,bg=colour210]#{?client_prefix,#[reverse] PREF , TMUX }"\
 "#P #[default] "
 ### 右パネル
 set-option -g status-right-length 60
 set-option -g status-right \
-"#[fg=colour250,bg=colour242] LA: #(cut -d' ' -f-3 /proc/loadavg) "\
-"#[fg=colour240,bg=colour247] %m月%d日 %H:%M #[default]"
+"#[fg=colour250,bg=colour242] %m月%d日 %H:%M "\
+"#[fg=black,bg=colour210] #(users) at #H #[default]"
 ### Windowパネル
 set-window-option -g window-status-format " #I #W "
 set-window-option -g window-status-current-format \
