--- a/.tmux.conf
+++ b/.tmux.conf
@@ -28,7 +28,7 @@ set-option -g status-left \
 set-option -g status-right-length 60
 set-option -g status-right \
 "#[fg=colour250,bg=colour242] %m月%d日 %H:%M "\
-"#[fg=black,bg=colour210] #(users) at #H #[default]"
+"#[fg=black,bg=colour210] #(whoami) at #H #[default]"
 ### Windowパネル
 set-window-option -g window-status-format " #I #W "
 set-window-option -g window-status-current-format \
