--- a/.tmux.conf
+++ b/.tmux.conf
@@ -48,4 +48,4 @@ bind -T root WheelDownPane if-shell -F -t = \
 set -s escape-time 0    # Vimを使うときにEscが遅くなるのを防ぐ
 
 ## 起動設定
-#set-option -g default-shell "/usr/bin/fish"
+set-option -g default-shell "/usr/bin/fish"
