--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,7 +7,7 @@ bind-key v copy-mode \; display "Copy-mode!"
 set-window-option -g mode-keys vi
 #### Prefix+Enter/y でコピー
 #bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
-bind-key -t vi-copy y copy-pipe "xsel -bi"
+# bind-key -t vi-copy y copy-pipe "xsel -bi" # TODO: エラーが出るので後で修正
 #### Prefix+p でペースト
 bind-key p if-shell 'xsel -b -o > ~/.tmux-buffer' 'load-buffer ~/.tmux-buffer ; paste-buffer'
 
