落ち着いた色に変更

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -22,17 +22,17 @@ set-option -g status-fg "colour250"
 ### 左パネル
 set-option -g status-left-length 20
 set-option -g status-left \
-"#[fg=black,bg=colour210]#{?client_prefix,#[reverse] PREF , TMUX }"\
+"#[fg=green,bg=black]#{?client_prefix,#[reverse] PREF , TMUX }"\
 "#P #[default] "
 ### 右パネル
 set-option -g status-right-length 60
 set-option -g status-right \
-"#[fg=colour250,bg=colour242] %m月%d日 %H:%M "\
-"#[fg=black,bg=colour210] #(whoami) at #H #[default]"
+"#[fg=green,bg=black] %m月%d日 %H:%M "\
+"#[fg=colour210,bg=black] #(whoami) @ #H #[default]"
 ### Windowパネル
 set-window-option -g window-status-format " #I #W "
 set-window-option -g window-status-current-format \
-"#[fg=colour255,bg=colour235,bold] #I #W #[default]"
+"#[fg=green,bg=colour235,bold] #I #W #[default]"
 set  -g pane-active-border-fg    colour166
 set  -g pane-border-fg           black
 setw -g window-status-current-fg blue
