--- a/nvim/rc/dein.toml
+++ b/nvim/rc/dein.toml
@@ -11,6 +11,10 @@ repo = 'scrooloose/nerdtree'
 [[plugins]]
 repo = 'Xuyuanp/nerdtree-git-plugin'
 
+# Edit tools
+[[plugins]]
+repo = 'tyru/caw.vim'
+
 
 # File import utils
 [[plugins]]
