Gitの差分を左端に表示するプラグインを追加

--- a/nvim/rc/dein.toml
+++ b/nvim/rc/dein.toml
@@ -12,6 +12,8 @@ repo = 'scrooloose/nerdtree'
 repo = 'Xuyuanp/nerdtree-git-plugin'
 [[plugins]]
 repo = 'nathanaelkane/vim-indent-guides'
+[[plugins]]
+repo = 'airblade/vim-gitgutter'
 
 # Edit tools
 [[plugins]]
