--- a/.tmux.conf
+++ b/.tmux.conf
@@ -46,6 +46,8 @@ bind -T root WheelDownPane if-shell -F -t = \
 
 ## その他
 set -s escape-time 0    # Vimを使うときにEscが遅くなるのを防ぐ
+set -g base-index 1  # ウィンドウのインデクスを1から
+setw -g pane-base-index 1  # ペインのインデックスを1から
 
 ## 起動設定
 set-option -g default-shell "/usr/bin/fish"
