windowsのナンバリングを自動で詰めるオプション

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -36,6 +36,7 @@ set-window-option -g window-status-current-format \
 set  -g pane-active-border-fg    colour166
 set  -g pane-border-fg           black
 setw -g window-status-current-fg blue
+set-option -g renumber-windows on
 
 ## マウス設定
 set -g mouse on
