solarizedカラーに変更

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -17,38 +17,42 @@ set-option -g status-position top
 set-option -g default-terminal screen-256color
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 set-option -g status-justify left
-set-option -g status-bg "colour240"
-set-option -g status-fg "colour250"
+set-option -g status-fg colour10
+set-option -g status-bg default
 ### 左パネル
 set-option -g status-left-length 20
 set-option -g status-left \
-"#[fg=green,bg=black]#{?client_prefix,#[reverse] PREF , TMUX }"\
+"#[fg=colour0,bg=colour6]#{?client_prefix,#[reverse] PREF , TMUX }"\
 "#P #[default] "
 ### 右パネル
 set-option -g status-right-length 60
 set-option -g status-right \
-"#[fg=green,bg=black] %m月%d日 %H:%M "\
-"#[fg=colour210,bg=black] #(whoami) @ #H #[default]"
+"#[fg=colour6,bg=default] %m月%d日 %H:%M "\
+"#[fg=colour8,bg=colour6] #(whoami) @ #H #[default]"
 ### Windowパネル
 set-window-option -g window-status-format " #I #W "
-set-window-option -g window-status-current-format \
-"#[fg=green,bg=colour235,bold] #I #W #[default]"
-set  -g pane-active-border-fg    colour166
-set  -g pane-border-fg           black
-setw -g window-status-current-fg blue
+set-window-option -g window-status-fg colour10
+set-window-option -g window-status-bg default
+set-window-option -g window-status-current-format " #I #W "
+set-window-option -g window-status-current-fg colour6
+set-window-option -g window-status-current-bg default
+#set-window-option -g window-status-current-attr bright
+set-option -g pane-active-border-fg    colour6
+set-option -g pane-border-fg           colour8
 set-option -g renumber-windows on
+#set-window-option -g window-status-attr dim
+# message text
+set-option -g message-bg colour8
+set-option -g message-fg colour5
 
 ## マウス設定
-set -g mouse on
+set-option -g mouse on
 bind -T root WheelUpPane   if-shell -F -t = \
 "#{alternate_on}" "send-keys -M" "select-pane -t =; copy-mode -e; send-keys -M"
 bind -T root WheelDownPane if-shell -F -t = \
 "#{alternate_on}" "send-keys -M" "select-pane -t =; send-keys -M"
 
 ## その他
-set -s escape-time 0    # Vimを使うときにEscが遅くなるのを防ぐ
-set -g base-index 1  # ウィンドウのインデクスを1から
-setw -g pane-base-index 1  # ペインのインデックスを1から
-
-## 起動設定
-set-option -g default-shell "/usr/bin/fish"
+set-option -s escape-time 0    # Vimを使うときにEscが遅くなるのを防ぐ
+set-option -g base-index 1  # ウィンドウのインデクスを1から
+set-window-option -g pane-base-index 1  # ペインのインデックスを1から
