--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,10 @@
+[core]
+	editor = vim
 [user]
 	email = urano.works.mail@gmail.com
 	name = URANO Ryoya
+[color]
+	ui = true
 [ghq]
 	root = /home/uryoya/Repositories/
 	root = /home/uryoya/go/src/
