alias `git branch`

--- a/.gitconfig
+++ b/.gitconfig
@@ -12,3 +12,6 @@
     # https://mattn.kaoriya.net/software/git/20140708105946.htm
     # TODO: このままだとCloseしてるブランチも持ってくるっぽいのでどうにかしたい
     pr-setup =  "config --add remote.upstream.fetch +refs/pull/*/head:refs/remotes/upstream/pr/*"
+
+    b = "branch"
+    ba = "branch -a"
