--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -1,9 +1,16 @@
 {
-    "languageserver": {
+  "languageserver": {
     "metals": {
       "command": "metals-vim",
       "rootPatterns": ["build.sbt"],
       "filetypes": ["scala", "sbt"]
+    }
+  },
+  "languageserver": {
+    "golang": {
+      "command": "gopls",
+      "rootPatterns": ["go.mod"],
+      "filetypes": ["go"]
     }
   }
 }
