add alias: search branch by fzf

--- a/.gitconfig
+++ b/.gitconfig
@@ -15,4 +15,4 @@
 
     br = "branch"
     bra = "branch -a"
-    co = "checkout"
+    co = "!git checkout $(git branch -a --format '%(refname:short)' | fzf)"
