--- a/.gitconfig
+++ b/.gitconfig
@@ -17,3 +17,4 @@
     bra = "branch -a"
     co = "!git checkout $(git branch -a --format '%(refname:short)' | fzf)"
     addf = "!fish -c __git_addf"
+    tmpcommit = "commit -am 'tmp commit'"
